# pomu-water-reminder

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  build_all  build_targets
resources/: resources.qrc
src/: CMakeLists.txt  README.rst  main.cc  qwidgetutils.cc  qwidgetutils.h  waternotif.cc  waternotif.h
src/gui/: CMakeLists.txt  aboutdialog.cc  alert.cc  alertdialog.cc  keydialog.cc  mainwindow.cc  prefsdialog.cc  utils.cc
src/gui/include/gui/: aboutdialog.h  alert.h  alertdialog.h  keydialog.h  mainwindow.h  prefsdialog.h  utils.h
src/qwidgets/: CMakeLists.txt  mainwindow.h  miscutils.cc  miscutils.h  notification.cc  notification.h
